SAK-52795 Samigo Hot Spot student pdf report broken
https://sakaiproject.atlassian.net/browse/SAK-52795